--- a/index.html
+++ b/index.html
@@ -9,109 +9,78 @@ div#map {
   height: 90ex;
 }
 </style>
-<script src="http://jakewendt.com/js/jquery.js" type="text/javascript"></script>
-<script src="http://jakewendt.com/js/jquery-ui.js" type="text/javascript"></script>
+<script type="text/javascript" src="http://jakewendt.com/js/jquery.js"></script>
+<script type="text/javascript" src="http://jakewendt.com/js/jquery-ui.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
-if( /jakewendt/.test(location.hostname) ){
-document.write('<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAB-v7nZ2fkxF0-r3MI9yZuhQpAt4bU7HiNDPgoQAogh38KYDQ_xQZgyFJX2xGvLku3dB9r3BLS7SmFg" type="text/javascript"><'+'/script>');
-} else {
-document.write('<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAB-v7nZ2fkxF0-r3MI9yZuhROBIwYeOsmfolgOSVewupk_6dWgBSiMbXhTbzMOg1qbRS4zmp-4tqQJA" type="text/javascript"><'+'/script>');
-}
-</script>
 
-<!--
-http://www.wikispeedia.org/a/marks_bb.php?name=10&nelat=40.94&swlat=40.86&nelng=-76.78&swlng=-76.86
-
-40.930208,-76.792678
-
--->
-<script type="text/javascript">
 var map;
 var markers = new Array;
 
 function initialize(lat, lng, zoom) {
-  if ( GBrowserIsCompatible() ) {
-    map = new GMap2(jQuery('#map')[0]);
-    map.setCenter(new GLatLng(lat, lng), zoom);
-    map.addControl(new GLargeMapControl());
-    getsigns();
-  }
+	var myOptions = {
+		zoom: zoom,
+		center: new google.maps.LatLng(lat,lng),
+		mapTypeId: google.maps.MapTypeId.ROADMAP
+	}
+	map = new google.maps.Map(document.getElementById("map"), myOptions );
+	getsigns();
+//	addMarkers();
 }
 
 function getsigns() {
-    $.ajax({
-        type: "GET",
-        url: "speedlimit.rb",
-        dataType: "xml",
-        success: xmlParser
-    });
+	$.ajax({
+		type: "GET",
+		url: "speedlimit.rb",
+		dataType: "xml",
+		success: xmlParser
+	});
 }
 
 function xmlParser(xml) {
-    $(xml).find("marker").each(function () {
-//if( /George Wendt III/.test( $(this).attr('label') ) ){
-			markers.push({
-			  mph: $(this).attr('mph'),
-			  lat: $(this).attr('lat'),
-			  lng: $(this).attr('lng')
-			});
-//}
-// what is cog?
-// marker label="George Wendt III" lat="40.86141080" lng="-76.79745465" mph="35" kph="0" cog="23" 
-    });
-    addMarkers();
+	$(xml).find("marker").each(function () {
+		markers.push({
+			mph: $(this).attr('mph'),
+			lat: $(this).attr('lat'),
+			lng: $(this).attr('lng')
+		});
+	});
+	addMarkers();
 }
-/*
-
-  should add
-
-  map.getCenter().x
-  map.getCenter().y
-  map.getZoom()
-
-  to trip/edit
-
-*/
 
 function addMarkers() {
-  // Create a base icon for all of our markers that specifies the
-  // shadow, icon dimensions, etc.
-  var baseIcon = new GIcon();
-  baseIcon.shadow = "http://www.google.com/mapfiles/shadow50.png";
-  baseIcon.iconSize = new GSize(20, 34);
-  baseIcon.shadowSize = new GSize(37, 34);
-  baseIcon.iconAnchor = new GPoint(9, 34);
-  baseIcon.infoWindowAnchor = new GPoint(9, 2);
-  baseIcon.infoShadowAnchor = new GPoint(18, 25);
-  var numerIcon = new GIcon(baseIcon);
-  for (var i=0; i < markers.length; i++ ) {
-    // Create a lettered icon for this point using our icon class
-    // Need to deal with possibility of more than 26 markers so restart at A
-//    var l = i;
-//    while(l>25){ l -= 26 }
-//    var letter = String.fromCharCode("A".charCodeAt(0) + l);
-//    letteredIcon.image = "http://www.google.com/mapfiles/marker" + letter + ".png";
-//    markerOptions = { icon:letteredIcon };
-// http://code.google.com/p/google-maps-icons/wiki/NumericIcons
-    numerIcon.image = "http://google-maps-icons.googlecode.com/files/red" + markers[i].mph + ".png";
-    markerOptions = { icon:numerIcon };
-    map.addOverlay( createMarker( i, markerOptions ) );
-  }
-}
 
-function createMarker( index, options) {
-  // The marker has to be created in a separate function
-  // to preserve the markers index
-  var latlng = new GLatLng(markers[index].lat, markers[index].lng);
-  var marker = new GMarker(latlng, options);
-//  GEvent.addListener(marker,"click", function() {
-//    window.location = markers[index].link;
-//  });
-  return marker;
+	var bounds = new google.maps.LatLngBounds();
+	for (var i=0; i < markers.length; i++ ) {
+		var myLatLng = new google.maps.LatLng(markers[i].lat, markers[i].lng);
+
+		var icon_url = "http://www.housingmaps.com/mapfiles/marker.png";
+		if ( ( typeof markers[i].mph ) != "undefined" ) {
+			icon_url = "http://google-maps-icons.googlecode.com/files/red" + markers[i].mph + ".png";
+		}
+
+		new google.maps.Marker({
+			icon: new google.maps.MarkerImage( icon_url,
+				// This marker is 28 pixels wide by 32 pixels tall.
+				new google.maps.Size(28, 32),
+				// The origin for this image is 0,0.
+				new google.maps.Point(0,0),
+				// The anchor for this image is the base of the flagpole at 0,32.
+				new google.maps.Point(0, 32)
+			),
+			position: myLatLng,
+			map: map
+		});
+		bounds.extend(myLatLng);
+		map.fitBounds(bounds);
+	}
 }
+jQuery(function(){
+	initialize(40.930208,-76.792678, 11);
+});
 </script>
 </head>
-<body onload='initialize(40.930208,-76.792678, 11)' onunload='GUnload()'>
+<body>
 <div id='map'></div>
 </body>
 </html>
