Updated initial latitude and longitude.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ function addMarkers() {
 	}
 }
 jQuery(function(){
-	initialize(40.930208,-76.792678, 11);
+//	initialize(40.930208,-76.792678, 11);
+	initialize(39,-95, 12);
 });
 </script>
 </head>
